--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "firebase": "^9.6.10",
     "pinia": "^2.0.13",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@types/tailwindcss": "^3.0.8",
